{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 105,
  "lineage": "e314d8de-c1a7-84c4-e1b5-094da688a4f7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae78360d832b6361",
            "domain": "vpc",
            "id": "eipalloc-0ae78360d832b6361",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-238-221-27.compute-1.amazonaws.com",
            "public_ip": "34.238.221.27",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828872486587:internet-gateway/igw-0b483c8a58074ef14",
            "id": "igw-0b483c8a58074ef14",
            "owner_id": "828872486587",
            "tags": {
              "Env": "ACSFINAL",
              "Name": "Group7-ACSFINAL-igw"
            },
            "tags_all": {
              "Env": "ACSFINAL",
              "Name": "Group7-ACSFINAL-igw"
            },
            "vpc_id": "vpc-0bf61ebe573e3b2c3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828872486587:route-table/rtb-04ebcb77aa4e0e4cd",
            "id": "rtb-04ebcb77aa4e0e4cd",
            "owner_id": "828872486587",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b483c8a58074ef14",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Group7-ACSFINAL-route-public-route_table"
            },
            "tags_all": {
              "Name": "Group7-ACSFINAL-route-public-route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf61ebe573e3b2c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085673fca88ef2340",
            "route_table_id": "rtb-04ebcb77aa4e0e4cd",
            "subnet_id": "subnet-069664ef6139bee95"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b16afaadf18f8a71",
            "route_table_id": "rtb-04ebcb77aa4e0e4cd",
            "subnet_id": "subnet-00ad91031cb7c9663"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e89fbd15cf793fb",
            "route_table_id": "rtb-04ebcb77aa4e0e4cd",
            "subnet_id": "subnet-0ea44d5cf90fcae26"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828872486587:subnet/subnet-08a218ac15598e89f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a218ac15598e89f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "828872486587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "ACSFINAL",
              "Name": "Group7-ACSFINAL-private-subnet-0"
            },
            "tags_all": {
              "Env": "ACSFINAL",
              "Name": "Group7-ACSFINAL-private-subnet-0"
            },
            "vpc_id": "vpc-0bf61ebe573e3b2c3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828872486587:subnet/subnet-031db2945cb0eda98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031db2945cb0eda98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "828872486587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "ACSFINAL",
              "Name": "Group7-ACSFINAL-private-subnet-1"
            },
            "tags_all": {
              "Env": "ACSFINAL",
              "Name": "Group7-ACSFINAL-private-subnet-1"
            },
            "vpc_id": "vpc-0bf61ebe573e3b2c3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828872486587:subnet/subnet-0b499a1531df8e4d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b499a1531df8e4d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "828872486587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "ACSFINAL",
              "Name": "Group7-ACSFINAL-private-subnet-2"
            },
            "tags_all": {
              "Env": "ACSFINAL",
              "Name": "Group7-ACSFINAL-private-subnet-2"
            },
            "vpc_id": "vpc-0bf61ebe573e3b2c3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828872486587:subnet/subnet-069664ef6139bee95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069664ef6139bee95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "828872486587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "ACSFINAL",
              "Name": "Group7-ACSFINAL-public-subnet-0"
            },
            "tags_all": {
              "Env": "ACSFINAL",
              "Name": "Group7-ACSFINAL-public-subnet-0"
            },
            "vpc_id": "vpc-0bf61ebe573e3b2c3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828872486587:subnet/subnet-00ad91031cb7c9663",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ad91031cb7c9663",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "828872486587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "ACSFINAL",
              "Name": "Group7-ACSFINAL-public-subnet-1"
            },
            "tags_all": {
              "Env": "ACSFINAL",
              "Name": "Group7-ACSFINAL-public-subnet-1"
            },
            "vpc_id": "vpc-0bf61ebe573e3b2c3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828872486587:subnet/subnet-0ea44d5cf90fcae26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea44d5cf90fcae26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "828872486587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "ACSFINAL",
              "Name": "Group7-ACSFINAL-public-subnet-2"
            },
            "tags_all": {
              "Env": "ACSFINAL",
              "Name": "Group7-ACSFINAL-public-subnet-2"
            },
            "vpc_id": "vpc-0bf61ebe573e3b2c3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:828872486587:vpc/vpc-0bf61ebe573e3b2c3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0d72449597ec96e25",
            "default_route_table_id": "rtb-073cdfa5346bbf794",
            "default_security_group_id": "sg-0033d183ca354115a",
            "dhcp_options_id": "dopt-09a513cf7e8e6fbb0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bf61ebe573e3b2c3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-073cdfa5346bbf794",
            "owner_id": "828872486587",
            "tags": {
              "Env": "ACSFINAL",
              "Name": "Group7-ACSFINAL-vpc"
            },
            "tags_all": {
              "Env": "ACSFINAL",
              "Name": "Group7-ACSFINAL-vpc"
            }
          }
        }
      ]
    }
  ]
}